--- a/AssemblyPaperFigures/FigureCode/Figure5/Figure5.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure5/Figure5.ipynb
@@ -272,39 +272,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total connections 171492.0\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>pre_pt_root_id</th>\n",
+       "      <th>post_pt_root_id</th>\n",
+       "      <th>size</th>\n",
+       "      <th>ctr_pt_position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>343961208</td>\n",
+       "      <td>864691132686005898</td>\n",
+       "      <td>864691132579592205</td>\n",
+       "      <td>502</td>\n",
+       "      <td>[735.220679697849, 140.8978023415846, 62.55155...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>362169461</td>\n",
+       "      <td>864691132768580620</td>\n",
+       "      <td>864691132598451263</td>\n",
+       "      <td>152</td>\n",
+       "      <td>[782.7063432464723, 315.05132201799984, 38.201...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>410154559</td>\n",
+       "      <td>864691133010270416</td>\n",
+       "      <td>864691132598451263</td>\n",
+       "      <td>367</td>\n",
+       "      <td>[837.6812368491422, 274.9947777384256, -10.340...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>425115456</td>\n",
+       "      <td>864691132714939663</td>\n",
+       "      <td>864691132625300120</td>\n",
+       "      <td>449</td>\n",
+       "      <td>[848.7357273657868, 348.31322450694734, 50.866...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>414571581</td>\n",
+       "      <td>864691132696842843</td>\n",
+       "      <td>864691132625300120</td>\n",
+       "      <td>576</td>\n",
+       "      <td>[841.965377659422, 375.66230858779943, 71.6744...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3828</th>\n",
+       "      <td>519081512</td>\n",
+       "      <td>864691132604517549</td>\n",
+       "      <td>864691132701046004</td>\n",
+       "      <td>1348</td>\n",
+       "      <td>[996.5138122467853, 423.66085243933543, 112.44...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3829</th>\n",
+       "      <td>452215287</td>\n",
+       "      <td>864691132651420275</td>\n",
+       "      <td>864691132901397498</td>\n",
+       "      <td>468</td>\n",
+       "      <td>[894.0413384174458, 470.34867868461436, 2.7485...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3830</th>\n",
+       "      <td>379475030</td>\n",
+       "      <td>864691132784677022</td>\n",
+       "      <td>864691132622103739</td>\n",
+       "      <td>811</td>\n",
+       "      <td>[794.5557722477943, 409.7108908664746, 133.224...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3831</th>\n",
+       "      <td>362827228</td>\n",
+       "      <td>864691132784677022</td>\n",
+       "      <td>864691132622103739</td>\n",
+       "      <td>1079</td>\n",
+       "      <td>[787.9641027593445, 389.16146958227375, 125.16...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3832</th>\n",
+       "      <td>446722879</td>\n",
+       "      <td>864691132684110453</td>\n",
+       "      <td>864691132636351527</td>\n",
+       "      <td>518</td>\n",
+       "      <td>[902.7496879664745, 473.7723153287899, 62.0807...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3833 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  2.],\n",
-       "       ...,\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0., 16.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  4.,  0.]])"
+       "             id      pre_pt_root_id     post_pt_root_id  size  \\\n",
+       "0     343961208  864691132686005898  864691132579592205   502   \n",
+       "1     362169461  864691132768580620  864691132598451263   152   \n",
+       "2     410154559  864691133010270416  864691132598451263   367   \n",
+       "3     425115456  864691132714939663  864691132625300120   449   \n",
+       "4     414571581  864691132696842843  864691132625300120   576   \n",
+       "...         ...                 ...                 ...   ...   \n",
+       "3828  519081512  864691132604517549  864691132701046004  1348   \n",
+       "3829  452215287  864691132651420275  864691132901397498   468   \n",
+       "3830  379475030  864691132784677022  864691132622103739   811   \n",
+       "3831  362827228  864691132784677022  864691132622103739  1079   \n",
+       "3832  446722879  864691132684110453  864691132636351527   518   \n",
+       "\n",
+       "                                        ctr_pt_position  \n",
+       "0     [735.220679697849, 140.8978023415846, 62.55155...  \n",
+       "1     [782.7063432464723, 315.05132201799984, 38.201...  \n",
+       "2     [837.6812368491422, 274.9947777384256, -10.340...  \n",
+       "3     [848.7357273657868, 348.31322450694734, 50.866...  \n",
+       "4     [841.965377659422, 375.66230858779943, 71.6744...  \n",
+       "...                                                 ...  \n",
+       "3828  [996.5138122467853, 423.66085243933543, 112.44...  \n",
+       "3829  [894.0413384174458, 470.34867868461436, 2.7485...  \n",
+       "3830  [794.5557722477943, 409.7108908664746, 133.224...  \n",
+       "3831  [787.9641027593445, 389.16146958227375, 125.16...  \n",
+       "3832  [902.7496879664745, 473.7723153287899, 62.0807...  \n",
+       "\n",
+       "[3833 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ground_truth_connectome_v1dd_1 = np.load(\"ground_truth_connectome_v1dd_1.npy\")\n",
-    "ground_truth_connectome_v1dd_1.shape\n",
-    "\n",
-    "print(\"Total connections\", np.sum(ground_truth_connectome_v1dd_1))\n",
+    "ground_truth_connectome_v1dd_1 = pd.read_feather(\"EM_data/synapse_table_v1dd_targeting_proofread_True_only_from_proofread_True_additional_cells.feather\")\n",
     "ground_truth_connectome_v1dd_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'pre_cell_table_v1dd_proofread_True_668.feather'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmotifs_stefan_four_chain_count\u001b[39;00m\n\u001b[1;32m      3\u001b[0m cell_table \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_feather(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpre_cell_table_v1dd_proofread_True_668.feather\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m cell_table[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectome_index\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cell_table\u001b[38;5;241m.\u001b[39mindex\n",
+      "File \u001b[0;32m~/Desktop/Research/AllenInternWork/Assembly_Organization/AssemblyPaperFigures/FigureCode/Figure5/motifs_stefan_four_chain_count.py:34\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m synapse_connectome\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Full Matrix\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# weight_matrix = np.load('ground_truth_summed_weights_v1dd_668.npy')\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# adjacency_matrix = weight_matrix.clip(0,1)\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# graph = nx.from_numpy_array(adjacency_matrix, create_using=nx.DiGraph)\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Make a graph of just excitatory cells\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m cell_table \u001b[38;5;241m=\u001b[39m \u001b[43mpandas\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_feather\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpre_cell_table_v1dd_proofread_True_668.feather\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m cell_table[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectome_index\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cell_table\u001b[38;5;241m.\u001b[39mindex\n\u001b[1;32m     36\u001b[0m cell_table \u001b[38;5;241m=\u001b[39m cell_table\u001b[38;5;241m.\u001b[39mquery(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcell_type == \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPYC\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m)[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectome_index\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpt_root_id\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msoma_layer\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mreset_index()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/cs109a/lib/python3.10/site-packages/pandas/io/feather_format.py:120\u001b[0m, in \u001b[0;36mread_feather\u001b[0;34m(path, columns, use_threads, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marrays\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marrow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mextension_types\u001b[39;00m  \u001b[38;5;66;03m# pyright: ignore[reportUnusedImport] # noqa: F401\u001b[39;00m\n\u001b[1;32m    118\u001b[0m check_dtype_backend(dtype_backend)\n\u001b[0;32m--> 120\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    121\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_text\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\n\u001b[1;32m    122\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m handles:\n\u001b[1;32m    123\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m dtype_backend \u001b[38;5;129;01mis\u001b[39;00m lib\u001b[38;5;241m.\u001b[39mno_default \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m using_pyarrow_string_dtype():\n\u001b[1;32m    124\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m feather\u001b[38;5;241m.\u001b[39mread_feather(\n\u001b[1;32m    125\u001b[0m             handles\u001b[38;5;241m.\u001b[39mhandle, columns\u001b[38;5;241m=\u001b[39mcolumns, use_threads\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mbool\u001b[39m(use_threads)\n\u001b[1;32m    126\u001b[0m         )\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/cs109a/lib/python3.10/site-packages/pandas/io/common.py:882\u001b[0m, in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    873\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\n\u001b[1;32m    874\u001b[0m             handle,\n\u001b[1;32m    875\u001b[0m             ioargs\u001b[38;5;241m.\u001b[39mmode,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    878\u001b[0m             newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    879\u001b[0m         )\n\u001b[1;32m    880\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    881\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[0;32m--> 882\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mioargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    883\u001b[0m     handles\u001b[38;5;241m.\u001b[39mappend(handle)\n\u001b[1;32m    885\u001b[0m \u001b[38;5;66;03m# Convert BytesIO or file objects passed with an encoding\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'pre_cell_table_v1dd_proofread_True_668.feather'"
+     ]
+    }
+   ],
+   "source": [
+    "import motifs_stefan_four_chain_count\n",
+    "\n",
+    "cell_table = pd.read_feather('pre_cell_table_v1dd_proofread_True_668.feather')\n",
+    "cell_table['connectome_index'] = cell_table.index\n",
+    "cell_table = cell_table.query('cell_type == \"PYC\"')[['connectome_index', 'pt_root_id', 'soma_layer']].reset_index()\n",
+    "synapse_table = pd.read_pickle('synapse_Table_668.pickle')\n",
+    "weight_matrix = motifs_stefan_four_chain_count.calc_ground_truth(cell_table, synapse_table, cell_table, use_sizes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Deprecation: this method is to facilitate beta testing of this feature, it will likely get removed in future versions. \n",
+      "WARNING:root:Deprecation: this method is to facilitate beta testing of this feature, it will likely get removed in future versions. \n",
+      "WARNING:root:Deprecation: this method is to facilitate beta testing of this feature, it will likely get removed in future versions. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['assemblies_by_roi_id', 'assemblies_by_pt_root_id', 'assemblies_by_connectome_index', 'assemblies_by_functional_index', 'functional_indexes_by_assembly', 'coregistration', 'cell'])\n",
+      "dict_keys(['pt_root_id_to_connectome_index', 'connectome_index_to_root_id', 'roi_id_to_pt_root_id', 'functional_index_to_roi_id'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import v1dd_coregistration_wrangling\n",
+    "\n",
+    "tables, mappings = v1dd_coregistration_wrangling.get_tables_and_mappings(online=True)\n",
+    "print(tables.keys())\n",
+    "print(mappings.keys())"
    ]
   },
   {
