Added printouts of mean and medians for chain motif analysis

--- a/AssemblyPaperFigures/FigureCode/Figure5/Figure5.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure5/Figure5.ipynb
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,13 +1548,15 @@
     "\n",
     "    print('A', pooled_assembly_cell_participation)\n",
     "    print('No A', no_a_cell_participation)\n",
+    "    print('Mean A:', np.mean(pooled_assembly_cell_participation), 'Median A:', np.median(pooled_assembly_cell_participation))\n",
+    "    print('Mean No A:', np.mean(no_a_cell_participation), 'Median No A:', np.median(no_a_cell_participation))\n",
     "    print('Done')\n",
     "    print('Rank-Sum Test:', stats.ranksums(np.array(pooled_assembly_cell_participation).flatten(), np.array(no_a_cell_participation).flatten(), 'greater').pvalue)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1593,6 +1595,8 @@
      "text": [
       "A [17225, 23393, 16374, 20828, 27482, 17062, 17207, 17048, 23615, 19918, 20131, 14157, 22590, 15607, 17088, 31449, 33525, 14567, 15669, 13060, 21945, 16874, 21946, 22744, 15790, 23672, 14985, 15240, 24755, 23006, 31538, 10623, 16342, 23084, 20079, 12522, 12079, 23765, 7637, 35135, 22019, 22103, 33155]\n",
       "No A [13847, 25336, 19646, 21742, 19608, 24500, 21411, 14024, 18407, 9280, 16332, 14471]\n",
+      "Mean A: 20210.06976744186 Median A: 20079.0\n",
+      "Mean No A: 18217.0 Median No A: 19007.5\n",
       "Done\n",
       "Rank-Sum Test: 0.16399587359726192\n"
      ]
@@ -1614,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1623,6 +1627,8 @@
      "text": [
       "A [249, 324, 0, 0, 0, 131, 0, 167, 59, 0, 70, 623, 689, 137, 449, 0, 666, 0, 277, 0, 70, 0, 178, 419, 237, 0, 0, 254, 0, 0, 246, 110, 505, 0, 765, 0, 435, 0, 105, 34, 0, 292, 41]\n",
       "No A [0, 416, 195, 0, 0, 145, 48, 195, 0, 0, 0, 737]\n",
+      "Mean A: 175.1627906976744 Median A: 70.0\n",
+      "Mean No A: 144.66666666666666 Median No A: 24.0\n",
       "Done\n",
       "Rank-Sum Test: 0.2772682908352456\n"
      ]
@@ -1644,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1653,6 +1659,8 @@
      "text": [
       "A [2055601, 2996962, 1941440, 2581046, 3628956, 2047685, 2040804, 2026291, 3048503, 2458431, 2479718, 1622369, 2847331, 1827314, 2044438, 4311873, 4620761, 1673317, 1856295, 1531602, 2781999, 2006414, 2770505, 2850636, 1818054, 3016975, 1762833, 1767885, 3208458, 2957533, 4299071, 1156464, 1930920, 2927795, 2476337, 1428677, 1374198, 3066184, 795563, 4922942, 2760107, 2790097, 4541590]\n",
       "No A [1572159, 3345968, 2428238, 2723302, 2439416, 3145571, 2696952, 1617852, 2212769, 987566, 1909062, 1668989]\n",
+      "Mean A: 2536092.418604651 Median A: 2476337.0\n",
+      "Mean No A: 2228987.0 Median No A: 2320503.5\n",
       "Done\n",
       "Rank-Sum Test: 0.16399587359726192\n"
      ]
@@ -1674,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1683,6 +1691,8 @@
      "text": [
       "A [2948, 3916, 0, 0, 0, 1308, 0, 2089, 440, 0, 621, 8188, 9715, 1338, 6070, 0, 9331, 0, 3595, 0, 524, 0, 2146, 5119, 2605, 0, 0, 2677, 0, 0, 3251, 1141, 7047, 0, 8881, 0, 6204, 0, 984, 291, 0, 3455, 290]\n",
       "No A [0, 5240, 2277, 0, 0, 1387, 309, 1847, 0, 0, 0, 10776]\n",
+      "Mean A: 2190.093023255814 Median A: 621.0\n",
+      "Mean No A: 1819.6666666666667 Median No A: 154.5\n",
       "Done\n",
       "Rank-Sum Test: 0.2772682908352456\n"
      ]
