Produce R package for Wilcoxon Rank-Sum Power Analysis and adapt to python

--- a/AssemblyPaperFigures/FigureCode/Figure5/Figure5.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure5/Figure5.ipynb
@@ -2259,6 +2259,180 @@
    "source": [
     "motif_by_assembly_boxplot_and_power_analysis(three_chain_results_array, just_pyramidal=True, chain_num = 3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adapt R Package into Python Version: Power Test for Wilcoxon Rank-Sum\n",
+    "\n",
+    "Code for original R Package is found at: https://github.com/stamats/MKpower/blob/master/R/simSsizeWilcoxTest.R\n",
+    "\n",
+    "Original Author - Matthias Kohl\n",
+    "\n",
+    "Original Package - MKpower: Power Analysis and Sample Size Calculation\n",
+    "\n",
+    "Attempted to Maintain as much as original code nomenclature as possible. Code Adapted with the Assistance of ChatGPT for package identification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import mannwhitneyu, wilcoxon\n",
+    "\n",
+    "def sim_ssize_wilcox_test(rx, ry=None, mu=0, sig_level=0.05, power=0.8, \n",
+    "                          test_type='two.sample', alternative='two.sided',\n",
+    "                          n_min=10, n_max=200, step_size= 5, \n",
+    "                          iter=10000, BREAK=True, correct=True):\n",
+    "    \"\"\"\n",
+    "    Perform a Monte-Carlo simulation to determine the empirical sample size \n",
+    "    required for a Wilcoxon test to achieve a specified power.\n",
+    "\n",
+    "    Adapted from original R package by Matthias Kohl: \n",
+    "    https://github.com/stamats/MKpower/blob/master/R/simSsizeWilcoxTest.R\n",
+    "\n",
+    "    Parameters:\n",
+    "    - rx: Function to generate random samples for the first group.\n",
+    "    - ry: Function to generate random samples for the second group (for two-sample test).\n",
+    "    - mu: Hypothesized difference in medians (default is 0).\n",
+    "    - sig_level: Significance level (alpha, default is 0.05).\n",
+    "    - power: Desired power of the test (default is 0.8).\n",
+    "    - test_type: Type of test ('two-sample', 'one-sample', 'paired').\n",
+    "    - alternative: Alternative hypothesis ('two-sided', 'less', 'greater').\n",
+    "    - n_min: Minimum sample size to consider.\n",
+    "    - n_max: Maximum sample size to consider.\n",
+    "    - step_size: Step size for increasing sample size.\n",
+    "    - iter: Number of iterations for the simulation.\n",
+    "    - BREAK: Whether to stop early if desired power is reached.\n",
+    "    - correct: Whether to apply continuity correction.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Dictionary with sample sizes and corresponding empirical powers.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Argument validation\n",
+    "    if not (0 < sig_level < 1):\n",
+    "        raise ValueError(\"'sig.level' has to be in (0, 1)\")\n",
+    "    if not (0 < power < 1):\n",
+    "        raise ValueError(\"'power' has to be in (0, 1)\")\n",
+    "    if not callable(rx):\n",
+    "        raise ValueError(\"'rx' has to be a function\")\n",
+    "    if not isinstance(mu, (int, float)):\n",
+    "        raise ValueError(\"'mu' has to be a numeric value\")\n",
+    "    if not isinstance(n_min, int) or n_min < 1:\n",
+    "        raise ValueError(\"'n.min' has to be a positive integer\")\n",
+    "    if not isinstance(n_max, int) or n_max <= n_min:\n",
+    "        raise ValueError(\"'n.max' has to be greater than 'n.min'\")\n",
+    "    if not isinstance(step_size, int) or step_size <= 0:\n",
+    "        raise ValueError(\"'step.size' has to be a positive integer\")\n",
+    "    if not isinstance(iter, int) or iter < 1:\n",
+    "        raise ValueError(\"'iter' has to be a positive integer\")\n",
+    "    \n",
+    "    # Create a range of sample sizes to test and initialize the array to store empirical power\n",
+    "    ns = np.arange(n_min, n_max + 1, step_size)\n",
+    "    emp_power = np.zeros(len(ns))\n",
+    "    \n",
+    "    if test_type == 'two-sample':\n",
+    "        if ry is None or not callable(ry):\n",
+    "            raise ValueError(\"'ry' has to be a function for 'two-sample' test type\")\n",
+    "        \n",
+    "        # Loop through each sample size\n",
+    "        for i, n in enumerate(ns):\n",
+    "            # Generate sample data for both groups\n",
+    "            data_x = np.array([rx(n) for _ in range(iter)])\n",
+    "            data_y = np.array([ry(n) for _ in range(iter)])\n",
+    "            \n",
+    "            # Perform Wilcoxon rank-sum test for each iteration\n",
+    "            p_values = np.array([mannwhitneyu(data_x[j], data_y[j], alternative=alternative, use_continuity=correct).pvalue for j in range(iter)])\n",
+    "            \n",
+    "            # Calculate empirical power\n",
+    "            emp_power[i] = np.mean(p_values < sig_level)\n",
+    "\n",
+    "            # Stop early if desired power is reached\n",
+    "            if emp_power[i] > power and BREAK:\n",
+    "                break\n",
+    "        \n",
+    "        METHOD = \"Wilcoxon rank sum test\"\n",
+    "    \n",
+    "    elif test_type in ['one-sample', 'paired']:\n",
+    "        # Loop through each sample size\n",
+    "        for i, n in enumerate(ns):\n",
+    "            # Generate sample data for the single group\n",
+    "            data_x = np.array([rx(n) for _ in range(iter)])\n",
+    "            \n",
+    "            # Perform Wilcoxon signed-rank test for each iteration\n",
+    "            p_values = np.array([wilcoxon(data_x[j] - mu, alternative=alternative, correction=correct).pvalue for j in range(iter)])\n",
+    "            \n",
+    "            # Calculate empirical power\n",
+    "            emp_power[i] = np.mean(p_values < sig_level)\n",
+    "\n",
+    "            # Stop early if desired power is reached\n",
+    "            if emp_power[i] > power and BREAK:\n",
+    "                break\n",
+    "        \n",
+    "        METHOD = \"Wilcoxon signed rank test\"\n",
+    "    \n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid 'type'. Should be 'two-sample', 'one-sample', or 'paired'\")\n",
+    "    \n",
+    "    # Replace zeros with NaNs in empirical power array\n",
+    "    emp_power[emp_power == 0] = np.nan\n",
+    "\n",
+    "    # Filter out any sample sizes with zero power, as well as corresponding power values\n",
+    "    ns = ns[~np.isnan(emp_power)]\n",
+    "    emp_power = emp_power[~np.isnan(emp_power)]\n",
+    "    \n",
+    "    # Compile all results into a dictionary\n",
+    "    result = {\n",
+    "        'n': ns,\n",
+    "        'rx': rx,\n",
+    "        'sig.level': sig_level,\n",
+    "        'emp.power': emp_power,\n",
+    "        'alternative': alternative,\n",
+    "        'method': METHOD,\n",
+    "        'note': \"n is number in each group\"\n",
+    "    }\n",
+    "    \n",
+    "    if ry is not None:\n",
+    "        result['ry'] = ry\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': array([10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70]),\n",
+       " 'rx': <function __main__.rx(n)>,\n",
+       " 'sig.level': 0.05,\n",
+       " 'emp.power': array([0.1608, 0.2458, 0.3256, 0.3797, 0.4539, 0.5237, 0.5783, 0.6257,\n",
+       "        0.6666, 0.7221, 0.7556, 0.785 , 0.8189]),\n",
+       " 'alternative': 'two-sided',\n",
+       " 'method': 'Wilcoxon rank sum test',\n",
+       " 'note': 'n is number in each group',\n",
+       " 'ry': <function __main__.ry(n)>}"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example testing (need to define data generating functions)\n",
+    "def rx(n): return np.random.normal(loc=0, scale=1, size=n)\n",
+    "def ry(n): return np.random.normal(loc=0.5, scale=1, size=n)\n",
+    "\n",
+    "sim_ssize_wilcox_test(rx, ry=ry, test_type='two-sample', alternative='two-sided')"
+   ]
   }
  ],
  "metadata": {
