--- a/files_to_discuss/chain_participation_properly_scaled.ipynb
+++ b/files_to_discuss/chain_participation_properly_scaled.ipynb
@@ -11,7 +11,6 @@
     "from dotmotif import Motif, GrandIsoExecutor\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import ranksums\n",
-    "import statsmodels.stats.multitest as smm\n",
     "from lsmm_data import LSMMData\n",
     "import json\n",
     "from tqdm import tqdm\n",
@@ -24,14 +23,6 @@
     "dirs_a = my_data.dirs\n",
     "mappings_a = my_data.mappings\n",
     "\n",
-    "# with open('pyr_chains_no_a.json') as f:\n",
-    "#     loaded_json = json.load(f)\n",
-    "# my_data_no_a = LSMMData.LSMMData(loaded_json)\n",
-    "# data_no_a = my_data_no_a.data\n",
-    "# params_no_a = my_data_no_a.params\n",
-    "# dirs_no_a = my_data_no_a.dirs\n",
-    "# mappings_no_a = my_data_no_a.mappings\n",
-    " \n",
     "\n",
     "# Generate the chain results\n",
     "# Assembly chain results (no no-a cells exist in their graph)\n",
@@ -42,6 +33,13 @@
     "adjacency_matrix = data_a['structural']['binary_connectome']\n",
     "pyr_graph = nx.from_numpy_array(adjacency_matrix, create_using=nx.DiGraph)\n",
     "\n",
+    "\n",
+    "## Uncomment below to load existing chain motif analysis results\n",
+    "# two_chain_results_array = np.load('all_cell_two_chain_results_array.npy')\n",
+    "# three_chain_results_array = np.load('all_cell_three_chain_results_array.npy')\n",
+    "# four_chain_results_array = np.load('all_cell_four_chain_results_array.npy')\n",
+    "\n",
+    "## Or uncomment below to generate new motif analysis results (Can take quite a while on larger graphs)\n",
     "# Motif Analysis with DotMotif: 2 Chain, All Pyr\n",
     "executor = GrandIsoExecutor(graph=pyr_graph)\n",
     "chain_defs = Motif(\"\"\"\n",
@@ -81,14 +79,14 @@
     "# print('Assembly Root IDs:', list(set(mappings_a['assemblies_by_pt_root_id'].keys()) - set(mappings_a['pt_root_ids_by_assembly']['No A'])))\n",
     "# print('NonAssembly Root IDs:', mappings_a['pt_root_ids_by_assembly']['No A'])\n",
     "\n",
-    "scaling_factors_two = [len(individual_assembly_indexes[i])-1 for i in range(13)]\n",
-    "scaling_factors_three = [len(individual_assembly_indexes[i])-1 for i in range(13)]\n",
-    "scaling_factors_four = [len(individual_assembly_indexes[i])-1 for i in range(13)]\n",
+    "scaling_factors_two = [(len(individual_assembly_indexes[i])-1) for i in range(13)]\n",
+    "scaling_factors_three = [(len(individual_assembly_indexes[i])-1) * (len(data_a['structural']['pre_cell'])-2) for i in range(13)]\n",
+    "scaling_factors_four = [(len(individual_assembly_indexes[i])-1) * (len(data_a['structural']['pre_cell'])-2) * (len(data_a['structural']['pre_cell'])-3) for i in range(13)]\n",
     "scaling_factors_lists = [scaling_factors_two, scaling_factors_three, scaling_factors_four]\n",
     "\n",
-    "no_a_scaling_factors_two = len(no_a_cell_indexes)-1\n",
-    "no_a_scaling_factors_three = len(no_a_cell_indexes)-1\n",
-    "no_a_scaling_factors_four = len(no_a_cell_indexes)-1\n",
+    "no_a_scaling_factors_two = (len(no_a_cell_indexes)-1)\n",
+    "no_a_scaling_factors_three = (len(no_a_cell_indexes)-1)  * (len(data_a['structural']['pre_cell'])-2)\n",
+    "no_a_scaling_factors_four = (len(no_a_cell_indexes)-1)  * (len(data_a['structural']['pre_cell'])-2) * (len(data_a['structural']['pre_cell'])-3)\n",
     "no_a_scaling_factors = [no_a_scaling_factors_two, no_a_scaling_factors_three, no_a_scaling_factors_four]\n",
     "\n"
    ]
