Workign on updating and validating SharedAssembly analysis vs DistinctAssemblies (Intra vs Inter)

--- a/AssemblyPaperFigures/FigureCode/Figure5/Figure5_all_cells.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure5/Figure5_all_cells.ipynb
@@ -163,6 +163,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(852, 852)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_connectome.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
