Updated the chain analysis based on 11/7 Meeting with Stefan M

--- a/AssemblyPaperFigures/FigureCode/Figure5/jwc_chain_analysis_by_sets.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure5/jwc_chain_analysis_by_sets.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
     "                            summed_size_connectome[cell_a, cell_b] * summed_size_connectome[cell_b, cell_c]\n",
     "                        )\n",
     "\n",
-    "        # After accumulating the weights for all 'i' for this specific 'j', normalize them by # of 'i' that match the condition of c\n",
+    "        # After accumulating the weights for all 'i' for this specific 'j', normalize them by the total number of realized connections\n",
     "        if j in W_out_feed_forward_inhibition_chains[cond_function.__name__]:\n",
     "            W_out_feed_forward_inhibition_chains[cond_function.__name__][j] /= normalizing_factor\n",
     "\n",
@@ -305,7 +305,7 @@
     "                            summed_size_connectome[cell_a, cell_b] * summed_size_connectome[cell_b, cell_c]\n",
     "                        )\n",
     "\n",
-    "        # After accumulating the weights for all 'j' for this specific 'i', normalize them by # of 'j' that match the condition of c\n",
+    "        # After accumulating the weights for all 'j' for this specific 'i', normalize them by the total number of realized connections\n",
     "        if i in W_in_feed_forward_inhibition_chains[cond_function.__name__]:\n",
     "            W_in_feed_forward_inhibition_chains[cond_function.__name__][i] /= normalizing_factor\n",
     "\n",
