--- a/AssemblyPaperFigures/FigureCode/Figure5/Figure5_Master_Freeze.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure5/Figure5_Master_Freeze.ipynb
@@ -2348,7 +2348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "assembly",
+   "display_name": "analysis",
    "language": "python",
    "name": "python3"
   },
@@ -2362,7 +2362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
