--- a/AssemblyPaperFigures/FigureCode/Figure4/Figure4.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure4/Figure4.ipynb
@@ -3346,7 +3346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "allensdk",
+   "display_name": "assembly",
    "language": "python",
    "name": "python3"
   },
@@ -3360,7 +3360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
