Put old code in a separate folder

--- a/AssemblyPaperFigures/FigureCode/Figure5/old_code/Figure5_all_cells.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure5/old_code/Figure5_all_cells.ipynb
@@ -3207,7 +3207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cell_assembly",
+   "display_name": "assembly",
    "language": "python",
    "name": "python3"
   },
