--- a/AssemblyPaperFigures/FigureCode/Figure5/old_code/Figure5_pyr_only_rectangular.ipynb
+++ b/AssemblyPaperFigures/FigureCode/Figure5/old_code/Figure5_pyr_only_rectangular.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,12 +39,15 @@
     "plt.rcParams[\"figure.figsize\"] = (10,10)\n",
     "sns.set_theme(style=\"whitegrid\")\n",
     "results_folder = \"pyr_only_rectangular_results\"\n",
-    "random.seed(747)"
+    "random.seed(747)\n",
+    "\n",
+    "# Import Stefan's Library for Data Management of V1DD\n",
+    "from lsmm_data import LSMMData"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 44293/44293 [00:08<00:00, 5009.19it/s]\n"
+      "100%|██████████| 44293/44293 [00:08<00:00, 5197.08it/s]\n"
      ]
     },
     {
@@ -122,7 +125,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 44293/44293 [00:10<00:00, 4163.24it/s]\n"
+      "100%|██████████| 44293/44293 [00:10<00:00, 4356.13it/s]\n"
      ]
     }
    ],
@@ -141,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +153,7 @@
        "dict_keys(['post_cell', 'pre_cell', 'synapse', 'synapse_count_connectome', 'binary_connectome', 'summed_size_connectome', 'averaged_size_connectome'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +215,7 @@
        "array(['', ''], dtype='<U6')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 39392/39392 [00:00<00:00, 382279.64it/s]\n"
+      "100%|██████████| 39392/39392 [00:00<00:00, 526758.52it/s]\n"
      ]
     }
    ],
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +295,7 @@
        "dict_keys(['functional_indexes_by_assembly', 'assemblies_by_functional_index', 'pt_root_id_to_connectome_index', 'connectome_index_to_root_id', 'pt_root_id_to_post_connectome_index', 'post_connectome_index_to_root_id', 'roi_id_to_pt_root_id', 'pt_root_id_to_roi_id', 'roi_id_to_functional_index', 'functional_index_to_roi_id', 'assemblies_by_roi_id', 'assemblies_by_pt_root_id', 'assemblies_by_connectome_index', 'assemblies_by_post_connectome_index', 'connectome_indexes_by_assembly', 'post_connectome_indexes_by_assembly', 'pt_root_ids_by_assembly', 'roi_ids_by_assembly'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +333,7 @@
        "       251, 256, 259, 276])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +360,7 @@
        "       3718, 3731, 3768, 3771])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,6 +1365,211 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{73: ['A 1'],\n",
+       " 102: ['A 1', 'A 3', 'A 4', 'A 5', 'A 7', 'A 8'],\n",
+       " 217: ['A 1'],\n",
+       " 119: ['A 1', 'A 5', 'A 7', 'A 10'],\n",
+       " 161: ['A 1', 'A 3'],\n",
+       " 204: ['A 1'],\n",
+       " 170: ['A 1', 'A 4', 'A 7', 'A 8'],\n",
+       " 213: ['A 1', 'A 4', 'A 7', 'A 8'],\n",
+       " 98: ['A 1', 'A 2', 'A 8'],\n",
+       " 171: ['A 1', 'A 3'],\n",
+       " 132: ['A 1'],\n",
+       " 159: ['A 1', 'A 3', 'A 5'],\n",
+       " 140: ['A 1', 'A 2', 'A 3'],\n",
+       " 44: ['A 1', 'A 6'],\n",
+       " 156: ['A 1'],\n",
+       " 203: ['A 1', 'A 4'],\n",
+       " 94: ['A 1', 'A 6'],\n",
+       " 196: ['A 1', 'A 3', 'A 4'],\n",
+       " 249: ['A 1', 'A 2'],\n",
+       " 55: ['A 1', 'A 6'],\n",
+       " 181: ['A 1', 'A 3', 'A 8'],\n",
+       " 198: ['A 2', 'A 11'],\n",
+       " 211: ['A 2'],\n",
+       " 160: ['A 2'],\n",
+       " 117: ['A 2', 'A 10'],\n",
+       " 251: ['A 2', 'A 4', 'A 5'],\n",
+       " 232: ['A 2', 'A 10'],\n",
+       " 107: ['A 3'],\n",
+       " 99: ['A 3', 'A 7', 'A 8'],\n",
+       " 224: ['A 3'],\n",
+       " 206: ['A 4'],\n",
+       " 144: ['A 4'],\n",
+       " 54: ['A 4', 'A 5', 'A 7', 'A 8'],\n",
+       " 276: ['A 4', 'A 5', 'A 7', 'A 8'],\n",
+       " 138: ['A 5', 'A 7'],\n",
+       " 78: ['A 5'],\n",
+       " 247: ['A 6'],\n",
+       " 173: ['A 9', 'A 12'],\n",
+       " 259: ['A 9'],\n",
+       " 256: ['A 10'],\n",
+       " 118: ['A 10'],\n",
+       " 129: ['A 13', 'A 15'],\n",
+       " 105: ['A 14'],\n",
+       " 123: ['No A'],\n",
+       " 86: ['No A'],\n",
+       " 74: ['No A'],\n",
+       " 184: ['No A'],\n",
+       " 150: ['No A'],\n",
+       " 81: ['No A'],\n",
+       " 195: ['No A'],\n",
+       " 158: ['No A'],\n",
+       " 153: ['No A'],\n",
+       " 71: ['No A'],\n",
+       " 41: ['No A'],\n",
+       " 207: ['No A']}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mappings['assemblies_by_connectome_index']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coregistered_post_cell_indexes = mappings['assemblies_by_post_connectome_index'].keys()\n",
+    "coregistered_cell_indexes = mappings['assemblies_by_connectome_index'].keys()\n",
+    "no_a_cell_indexes = mappings['connectome_indexes_by_assembly']['No A']\n",
+    "no_a_post_cell_indexes = mappings['post_connectome_indexes_by_assembly']['No A']\n",
+    "pooled_assembly_indexes = list(set(coregistered_cell_indexes) - set(no_a_cell_indexes))\n",
+    "pooled_assembly_post_indexes = list(set(coregistered_post_cell_indexes) - set(no_a_post_cell_indexes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123 1449 864691132667436992 864691132667436992\n",
+      "86 1011 864691132841768198 864691132841768198\n",
+      "74 910 864691132680560211 864691132680560211\n",
+      "184 1981 864691132728579766 864691132728579766\n",
+      "150 1725 864691132748334211 864691132748334211\n",
+      "81 957 864691132746110031 864691132746110031\n",
+      "195 2210 864691132835126165 864691132835126165\n",
+      "158 1801 864691132641639590 864691132641639590\n",
+      "153 1745 864691132999886005 864691132999886005\n",
+      "71 900 864691132972662837 864691132972662837\n",
+      "41 620 864691132578187284 864691132578187284\n",
+      "207 2294 864691132741334425 864691132741334425\n"
+     ]
+    }
+   ],
+   "source": [
+    "### do calculus for no_assembly cells\n",
+    "by_pre_cell_outbound_binary_no_assembly_first_order = []\n",
+    "for pre_index in no_a_cell_indexes:\n",
+    "    pre_root_id = mappings['connectome_index_to_root_id'][pre_index]\n",
+    "    no_assembly_binary_connections = 0\n",
+    "    no_assembly_syn_counts = 0\n",
+    "    no_assembly_syn_counts = 0\n",
+    "    no_assembly_summed_psd = 0\n",
+    "    no_assembly_average_psd = 0\n",
+    "\n",
+    "    for post_index in no_a_post_cell_indexes:\n",
+    "        post_root_id = mappings['post_connectome_index_to_root_id'][post_index]\n",
+    "        # No Autapses\n",
+    "        if pre_root_id == post_root_id:\n",
+    "            print(pre_index, post_index, pre_root_id, post_root_id)\n",
+    "            continue\n",
+    "        # Case where both pre and post are assigned to no assembly\n",
+    "        no_assembly_binary_connections += 1 \n",
+    "    by_pre_cell_outbound_binary_no_assembly_first_order.append(no_assembly_binary_connections)\n",
+    "\n",
+    "### do calculus for assembly_cells\n",
+    "by_precell_outbound_binary_shared_assembly_first_order = []\n",
+    "by_precell_outbound_binary_disjoint_assembly_first_order = []\n",
+    "\n",
+    "by_precell_outbound_syn_count_shared_assembly_first_order = []\n",
+    "non_zero_by_precell_outbound_syn_count_shared_assembly_first_order = []\n",
+    "by_precell_outbound_syn_count_disjoint_assembly_first_order = []\n",
+    "non_zero_by_precell_outbound_syn_count_disjoint_assembly_first_order = []\n",
+    "\n",
+    "by_precell_outbound_summed_psd_shared_assembly_first_order = []\n",
+    "non_zero_by_precell_outbound_summed_psd_shared_assembly_first_order = []\n",
+    "by_precell_outbound_summed_psd_disjoint_assembly_first_order = []\n",
+    "non_zero_by_precell_outbound_summed_psd_disjoint_assembly_first_order = []\n",
+    "\n",
+    "by_precell_outbound_average_psd_shared_assembly_first_order = []\n",
+    "non_zero_by_precell_outbound_average_psd_shared_assembly_first_order = []\n",
+    "by_precell_outbound_average_psd_disjoint_assembly_first_order = []\n",
+    "non_zero_by_precell_outbound_average_psd_disjoint_assembly_first_order = []\n",
+    "\n",
+    "for pre_index in pooled_assembly_indexes:\n",
+    "    pre_root_id = mappings['connectome_index_to_root_id'][pre_index]\n",
+    "    pre_assembly_assignment = mappings['assemblies_by_connectome_index'][pre_index]\n",
+    "\n",
+    "    shared_assembly_binary_connections = 0\n",
+    "    shared_assembly_non_zero_binary_connectins = 0\n",
+    "    disjoint_assembly_binary_connections = 0\n",
+    "    disjoint_assembly_non_zero_binary_connections = 0\n",
+    "    shared_assembly_syn_counts = 0\n",
+    "    disjoint_assembly_syn_counts = 0\n",
+    "    shared_assembly_summed_psd = 0\n",
+    "    disjoint_assembly_summed_psd = 0\n",
+    "    shared_assembly_average_psd = 0\n",
+    "    disjoint_assembly_average_psd = 0\n",
+    "\n",
+    "    for post_index in pooled_assembly_post_indexes:\n",
+    "        post_root_id = mappings['post_connectome_index_to_root_id'][pre_index]\n",
+    "        post_assembly_assignment = mappings['assemblies_by_post_connectome_index'][post_index]\n",
+    "\n",
+    "        # No Autapses\n",
+    "        if pre_root_id == post_root_id:\n",
+    "            print(pre_index, post_index, pre_root_id, post_root_id)\n",
+    "            continue\n",
+    "\n",
+    "        # Check if there is a shared assignment\n",
+    "        has_shared_assignment = (not (set(pre_assembly_assignment).isdisjoint(post_assembly_assignment)))\n",
+    "        if has_shared_assignment:\n",
+    "            # Case where there is a connection\n",
+    "            if np.any(np.logical_and(two_chain_results_array[:, 0] == pre_cell, two_chain_results_array[:, -1] == post_cell)):\n",
+    "                shared_assembly_binary_connections += 1\n",
+    "                shared_assembly_syn_counts += summed_size_connectome[pre_index, post_index]\n",
+    "                shared_assembly_summed_psd += summed_size_connectome[pre_index, post_index]\n",
+    "                shared_assembly_average_psd += average_size_connectome[pre_index, post_index]\n",
+    "            # Case where there is no connection\n",
+    "            else:\n",
+    "                shared_assembly_non_zero_binary_connectins += 1\n",
+    "        # Case where there is no shared assignment (disjoint)\n",
+    "        else:\n",
+    "            # Case where there is a connection\n",
+    "            if np.any(np.logical_and(two_chain_results_array[:, 0] == pre_cell, two_chain_results_array[:, -1] == post_cell)):\n",
+    "                disjoint_assembly_binary_connections += 1\n",
+    "                disjoint_assembly_syn_counts += summed_size_connectome[pre_index, post_index]\n",
+    "                disjoint_assembly_summed_psd += summed_size_connectome[pre_index, post_index]\n",
+    "                disjoint_assembly_average_psd += average_size_connectome[pre_index, post_index]\n",
+    "            # Case where there is no connection\n",
+    "            else:\n",
+    "                disjoint_assembly_non_zero_binary_connections += 1\n",
+    "        \n",
+    "        # count possible connections\n",
+    "        shared_assembly_number_of_possible_posts = shared_assembly_binary_connections + shared_assembly_non_zero_binary_connectins\n",
+    "        disjoint_assembly_number_of_possible_post = disjoint_assembly_binary_connections + disjoint_assembly_non_zero_binary_connections\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -1375,28 +1583,15 @@
     }
    ],
    "source": [
-    "zero_connection_count = 0\n",
-    "connection_count = 0\n",
-    "by_precell_outbound_binary_intra_assembly_first_order = []\n",
-    "by_precell_outbound_binary_inter_assembly_first_order = []\n",
-    "by_precell_outbound_syn_count_intra_assembly_first_order = []\n",
-    "non_zero_by_precell_outbound_syn_count_intra_assembly_first_order = []\n",
-    "by_precell_outbound_syn_count_inter_assembly_first_order = []\n",
-    "non_zero_by_precell_outbound_syn_count_inter_assembly_first_order = []\n",
-    "by_precell_outbound_summed_psd_intra_assembly_first_order = []\n",
-    "non_zero_by_precell_outbound_summed_psd_intra_assembly_first_order = []\n",
-    "by_precell_outbound_summed_psd_inter_assembly_first_order = []\n",
-    "non_zero_by_precell_outbound_summed_psd_inter_assembly_first_order = []\n",
-    "by_precell_outbound_average_psd_intra_assembly_first_order = []\n",
-    "non_zero_by_precell_outbound_average_psd_intra_assembly_first_order = []\n",
-    "by_precell_outbound_average_psd_inter_assembly_first_order = []\n",
-    "non_zero_by_precell_outbound_average_psd_inter_assembly_first_order = []\n",
+    "\n",
     "\n",
     "assemblies_by_coregistered_sans_no_a = {k: v for k, v in assemblies_by_coregistered.items() if k != 'No A'}\n",
     "post_assemblies_by_coregistered_sans_no_a = {k: v for k, v in post_assemblies_by_coregistered.items() if k != 'No A'}\n",
     "\n",
     "# Intra-Group\n",
     "for pre_assembly, pre_cells in assemblies_by_coregistered_sans_no_a.items():\n",
+    "\n",
+    "\n",
     "    actual_assembly_connections = 0\n",
     "    post_cells = post_assemblies_by_coregistered_sans_no_a[pre_assembly]\n",
     "    #initialize normalization constants\n",
